Use TextUtils bullet-points instead of PropertyHelper